# wasm-angstrom-bundle-decode

./: README.md  build-package.sh  build-test.sh
pkg/: package.json  rs_bundle_decode.js
rs-bundle-decode/: Cargo.toml
rs-bundle-decode/src/: lib.rs  types.rs
ts-bundle-decode/: .npmignore  README.md  bundle-decode-test.ts  index.html  index.ts  package-lock.json  package.json  tsconfig.json  vite.config.ts
ts-bundle-decode/pkg/: package.json  rs_bundle_decode.d.ts  rs_bundle_decode_bg.js  rs_bundle_decode_bg.wasm  rs_bundle_decode_bg.wasm.d.ts
