[package]
name = "rs-bundle-decode"
version = "0.1.0"
edition = "2024"


[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
# getrandom = { version = "0.2.16", features = ["wasm_js"] }
hex = { version = "0.4", default-features = false, features = ["alloc"] }
pade = { git = "https://github.com/SorellaLabs/pade", version = "0.1.0", default-features = false }
pade-macro = { git = "https://github.com/SorellaLabs/pade", version = "0.1.0", default-features = false }
serde_json = "1"
serde = { version = "1", features = ["derive"] }


[dev-dependencies]
angstrom-types = { git = "https://github.com/SorellaLabs/angstrom.git", default-features = false }
alloy-primitives = { version = "1", default-features = false, features = [
    "std",
    "serde",
] }
